[gd_scene load_steps=4 format=3 uid="uid://bb6e72f488cad"]

[ext_resource type="PackedScene" uid="uid://ig2ib85womvq" path="res://addons/pronto/signal_connecting/node_to_node_configurator.tscn" id="1_lby2x"]
[ext_resource type="Script" path="res://addons/pronto/signal_connecting/state_connection_configuration.gd" id="2_b6kw2"]
[ext_resource type="Script" path="res://addons/pronto/signal_connecting/expression_edit.gd" id="3_qkqfd"]

[node name="state_connection_configuration" instance=ExtResource("1_lby2x")]
offset_right = 384.0
offset_bottom = 222.0
script = ExtResource("2_b6kw2")

[node name="Receiver" parent="MarginContainer/VBoxContainer" index="3"]
visible = false

[node name="ReceiverPath" parent="MarginContainer/VBoxContainer/Receiver" index="1"]
visible = false

[node name="FunctionName" parent="MarginContainer/VBoxContainer/Receiver" index="2"]
visible = false

[node name="LeftParen" parent="MarginContainer/VBoxContainer/Receiver" index="3"]
visible = false

[node name="Args" parent="MarginContainer/VBoxContainer/Receiver" index="4"]
visible = false

[node name="RightParen" parent="MarginContainer/VBoxContainer/Receiver" index="5"]
visible = false

[node name="ResizableContainer" parent="MarginContainer/VBoxContainer" index="4"]
visible = false

[node name="Expression" parent="MarginContainer/VBoxContainer/ResizableContainer" index="2"]
visible = false
custom_minimum_size = Vector2(0, 43.389)
theme_override_constants/separation = 0
script = ExtResource("3_qkqfd")
placeholder_text = "Expression..."

[node name="Condition" parent="MarginContainer/VBoxContainer/HBoxContainer2/ResizableContainer2" index="2"]
custom_minimum_size = Vector2(0, 43.93)
size_flags_horizontal = 3
theme_override_constants/separation = 0
script = ExtResource("3_qkqfd")
placeholder_text = "Expression..."

[node name="ReceiverLabel" type="Label" parent="MarginContainer/VBoxContainer" index="7"]
unique_name_in_owner = true
layout_mode = 2

[node name="TriggerContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" index="8"]
layout_mode = 2

[node name="TriggerSelection" type="OptionButton" parent="MarginContainer/VBoxContainer/TriggerContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TriggerContainer" index="2"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/TriggerContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter trigger here"

[node name="add_trigger" type="Button" parent="MarginContainer/VBoxContainer/TriggerContainer/HBoxContainer" index="2"]
layout_mode = 2
text = "Add trigger"

[connection signal="pressed" from="MarginContainer/VBoxContainer/TriggerContainer/HBoxContainer/add_trigger" to="." method="_on_add_trigger_pressed"]
